# blink-mm

./: .amltignore  .gitignore  .gitmodules  CMakeLists.txt  DockerFile  readme.md  requirements.txt
blink_mm/: im2col.py
blink_mm/ae/: eval_bert_accuracy.sh  eval_cnn_accuracy.sh  eval_disk_size.sh  eval_memory.sh  eval_ops.sh  eval_power.sh  readme.md  training_recipes.md
blink_mm/ae/eval_latency/: eval_pixel4.sh  eval_pixel4_ort.sh  eval_pixel6.sh  eval_pixel6_ort.sh  eval_x86_server.sh  eval_x86_server_ort.sh
blink_mm/ae/organize/: layerwise_latency.py  organize_layerwise_latency.sh  organize_power.sh  power.py
blink_mm/ae/setup_rpc_for_tvm/: setup_pixel4.sh  setup_pixel6.sh  setup_rpc_tracker.sh
blink_mm/count/: disk_size_main.py  fvcore_handlers.py  hooks.py  main.py
blink_mm/data/: cifar.py  dispatcher.py  download_datasets.py  glue.py  mnist.py  speech_commands.py  utk_face.py
blink_mm/data/bookcorpus_and_wiki/: data.py  preprocess.py
blink_mm/expers/: eval_bert_accuracy.py  eval_cnn_accuracy.py  eval_ort_latency.py  pretrain_bookcorpus_and_wiki.py  submit_glue.py  train_cnn.py  train_glue.py  utils.py
blink_mm/hooks/: annealing_temperature_hook.py  monitor_temperature_hook.py  switch_quantization_mode_hook.py
blink_mm/networks/: distill_network.py  regression_cnn_wrapper.py
blink_mm/ops/: amm_conv2d.py  amm_linear.py  quant_amm_conv2d.py  utils.py
blink_mm/transforms/: handlers.py  transfer.py  utils.py
native/: main.cc  profile_tvm_model.cc
native/energy_profiler/: energy_profiler.cc  energy_profiler.h  main.cc
(+63 files in other folders)
